@@ -27,15 +27,27 @@ public class RE_commercialService {
 
     @Transactional(readOnly = true)
     public DashboardStats getDashboardData(Utilisateur utilisateur, String structure, LocalDateTime startDate) {
+        Profil profil = utilisateur.getProfil();
+        if (profil == null) return new DashboardStats();
 
+        String effectiveStructure = extractStructure(utilisateur);
         List<String> agencyCodes = extractAgencyCodes(utilisateur);
         List<String> zoneCodes = extractZoneCodes(utilisateur);
         List<String> regionCodes = extractRegionCodes(utilisateur);
-        String effectiveStructure = extractStructure(utilisateur);
 
+        List<String> activityCodes = (profil.getActivite() == 1 && utilisateur.getActivites() != null) ?
+                utilisateur.getActivites().stream().map(Activite::getCode).toList() : null;
+        List<String> marcheCodes = (profil.getMarche() == 1 && utilisateur.getMarches() != null) ?
+                utilisateur.getMarches().stream().map(Marche::getCode).toList() : null;
+        List<String> segmentCodes = (profil.getSegment() == 1 && utilisateur.getSegments() != null) ?
+                utilisateur.getSegments().stream().map(Segment::getCode).toList() : null;
+        List<String> businessCenterCodes = (profil.getCentreAffaire() == 1 && utilisateur.getCentreAffaires() != null) ?
+                utilisateur.getCentreAffaires().stream().map(CentreAffaire::getCode).toList() : null;
+
+        // استدعاء الـ Repository بالتعديلات الجديدة
         DashboardStats stats = clientRepository.getDashboardGlobalStats(
-                agencyCodes, zoneCodes, regionCodes, null, null, null, null,
-                null, null, effectiveStructure, null, null, null, startDate
+                agencyCodes, zoneCodes, regionCodes, activityCodes, marcheCodes,
+                segmentCodes, businessCenterCodes, null, "N", effectiveStructure, null, null, null, startDate
         );
 
         List<MonthlyEvolutionDTO> monthlyStats = clientRepository.getDashboardMonthlyStats(
@@ -48,51 +60,27 @@ public class RE_commercialService {
             stats = new DashboardStats();
             stats.setMonthlyEvolution(monthlyStats);
         }
-
         return stats;
     }
 
     @Transactional(readOnly = true)
-    public List<Client> getClientsForUser(Utilisateur utilisateur,
-                                          String agencyCode,
-                                          String activityCode,
-                                          String marcheCode,
-                                          String segmentCode,
-                                          String businessCenterCode,
-                                          String zoneCode,
-                                          String regionCode,
-                                          String postalCode,
-                                          String dossierType,
-                                          String structure,
-                                          String fullName,
-                                          String clientGroup,
-                                          String createdBy,
-                                          LocalDateTime startDate,
-                                          String sortBy,
-                                          String sortDir) {
+    public List<Client> getClientsForUser(Utilisateur utilisateur, String agencyCode, String activityCode,
+                                          String marcheCode, String segmentCode, String businessCenterCode,
+                                          String zoneCode, String regionCode, String postalCode, String isCloture,
+                                          String structure, String fullName, String clientGroup, String createdBy,
+                                          LocalDateTime startDate, String sortBy, String sortDir) {
 
         Profil profil = utilisateur.getProfil();
         if (profil == null) return List.of();
 
         String effectiveStructure = extractStructure(utilisateur);
-
         List<String> agencyCodes = extractAgencyCodes(utilisateur);
         List<String> zoneCodes = extractZoneCodes(utilisateur);
         List<String> regionCodes = extractRegionCodes(utilisateur);
 
-        if (zoneCode != null && !zoneCode.trim().isEmpty()) {
-            if (zoneCodes != null && !zoneCodes.contains(zoneCode)) {
-                return List.of();
-            }
-            zoneCodes = List.of(zoneCode);
-        }
-
-        if (regionCode != null && !regionCode.trim().isEmpty()) {
-            if (regionCodes != null && !regionCodes.contains(regionCode)) {
-                return List.of();
-            }
-            regionCodes = List.of(regionCode);
-        }
+        if (zoneCode != null && !zoneCode.isBlank()) zoneCodes = List.of(zoneCode);
+        if (regionCode != null && !regionCode.isBlank()) regionCodes = List.of(regionCode);
+        if (agencyCode != null && !agencyCode.isBlank()) agencyCodes = List.of(agencyCode);
 
         List<String> activityCodes = (profil.getActivite() == 1 && utilisateur.getActivites() != null) ?
                 utilisateur.getActivites().stream().map(Activite::getCode).toList() : null;
@@ -103,83 +91,29 @@ public class RE_commercialService {
         List<String> businessCenterCodes = (profil.getCentreAffaire() == 1 && utilisateur.getCentreAffaires() != null) ?
                 utilisateur.getCentreAffaires().stream().map(CentreAffaire::getCode).toList() : null;
 
-        if (agencyCode != null && !agencyCode.trim().isEmpty()) {
-            if (agencyCodes != null && !agencyCodes.contains(agencyCode)) {
-                return List.of();
-            }
-            agencyCodes = List.of(agencyCode);
-        }
-
-        if (activityCode != null && !activityCode.trim().isEmpty()) {
-            if (activityCodes != null && !activityCodes.contains(activityCode)) {
-                return List.of();
-            }
-            activityCodes = List.of(activityCode);
-        }
-
-        if (marcheCode != null && !marcheCode.trim().isEmpty()) {
-            if (marcheCodes != null && !marcheCodes.contains(marcheCode)) {
-                return List.of();
-            }
-            marcheCodes = List.of(marcheCode);
-        }
-
-        if (segmentCode != null && !segmentCode.trim().isEmpty()) {
-            if (segmentCodes != null && !segmentCodes.contains(segmentCode)) {
-                return List.of();
-            }
-            segmentCodes = List.of(segmentCode);
-        }
-
-        if (businessCenterCode != null && !businessCenterCode.trim().isEmpty()) {
-            if (businessCenterCodes != null && !businessCenterCodes.contains(businessCenterCode)) {
-                return List.of();
-            }
-            businessCenterCodes = List.of(businessCenterCode);
-        }
-
-        if (!ALLOWED_SORT_FIELDS.contains(sortBy)) {
-            sortBy = "totalImpayeAmount";
-        }
-
-        Sort sort = "asc".equalsIgnoreCase(sortDir) ?
-                Sort.by(sortBy).ascending() : Sort.by(sortBy).descending();
+        if (!ALLOWED_SORT_FIELDS.contains(sortBy)) sortBy = "totalImpayeAmount";
+        Sort sort = "asc".equalsIgnoreCase(sortDir) ? Sort.by(sortBy).ascending() : Sort.by(sortBy).descending();
 
         return clientRepository.findByPerimetre(
                 agencyCodes, zoneCodes, regionCodes, activityCodes, marcheCodes,
-                segmentCodes, businessCenterCodes, postalCode, dossierType,
-                effectiveStructure, fullName, clientGroup, createdBy, startDate,
-                sort
+                segmentCodes, businessCenterCodes, postalCode, isCloture,
+                effectiveStructure, fullName, clientGroup, createdBy, startDate, sort
         );
     }
 
-    // ==================== Extract Methods ====================
-
     private String extractStructure(Utilisateur u) {
-        if (u.getProfil().getStructure() != null) {
-            return u.getProfil().getStructure().name();
-        }
-        return null;
+        return (u.getProfil().getStructure() != null) ? u.getProfil().getStructure().name() : null;
     }
 
     private List<String> extractAgencyCodes(Utilisateur u) {
-        if (u.getProfil().getAgence() == 1 && u.getAgences() != null) {
-            return u.getAgences().stream().map(Agence::getCode).toList();
-        }
-        return null;
+        return (u.getProfil().getAgence() == 1 && u.getAgences() != null) ? u.getAgences().stream().map(Agence::getCode).toList() : null;
     }
 
     private List<String> extractZoneCodes(Utilisateur u) {
-        if (u.getProfil().getZone() == 1 && u.getZones() != null) {
-            return u.getZones().stream().map(Zone::getCode).toList();
-        }
-        return null;
+        return (u.getProfil().getZone() == 1 && u.getZones() != null) ? u.getZones().stream().map(Zone::getCode).toList() : null;
     }
 
     private List<String> extractRegionCodes(Utilisateur u) {
-        if (u.getProfil().getRegion() == 1 && u.getRegions() != null) {
-            return u.getRegions().stream().map(Region::getCode).toList();
-        }
-        return null;
+        return (u.getProfil().getRegion() == 1 && u.getRegions() != null) ? u.getRegions().stream().map(Region::getCode).toList() : null;
     }
 }
